# ds-u2-actividad-1b-listasenlazadassimples-gurigurig

./: Arduino_Sensores.ino  CMakeLists.txt  Implementaciones.cpp  ListaSensor.h  README.md  SensorBase.h  Sensores.h  main.cpp
